objects/Community_Learning_Board__c.object
<CustomObject>
    <fields>
        <fullName>Community_ID__c</fullName>
        <label>Community ID</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Community Learning Boards</relationshipLabel>
        <relationshipName>Community_Learning_Boards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Board_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Board ID</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>Community Learning Boards</relationshipLabel>
        <relationshipName>Community_Learning_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Learning Board</label>
    <nameField>
        <displayFormat>CLB-{00000000}</displayFormat>
        <label>Community Learning Board ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Learning Boards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>